--- a/main/blog/templates/single-blog.html
+++ b/main/blog/templates/single-blog.html
@@ -7,6 +7,8 @@
 {% block og_description %}{{ post.summary|default:post.title }}{% endblock %}
 {% block twitter_title %}{{ post.title }} | {{ company_info.name|default:global_settings.site_title }}{% endblock %}
 {% block twitter_description %}{{ post.summary|default:post.title }}{% endblock %}
+{% block og_image %}{% absolute_url post.image.url %}{% endblock %}
+{% block twitter_image %}{% absolute_url post.image.url %}{% endblock %}
 {% block extra_meta %}
   <meta property="og:type" content="article">
   <meta property="article:published_time" content="{{ post.created_at|date:'c' }}">
