--- a/main/products/templates/product_cards.html
+++ b/main/products/templates/product_cards.html
@@ -1,6 +1,7 @@
 {% load main_filters %}
 {% load clean_query %}
 {% load humanize %}
+{% load imagekit_tags %}
 <div class="row">
   {% if page_obj %}
     {% for product in page_obj %}
@@ -10,7 +11,7 @@
             style="display: block; height: 200px; padding: 20px; background: #f8f9fa; position: relative;">
             <img alt="{{product.title}}" 
                 class="img-contain main-image" 
-                src="{{ product.image.url }}" 
+                src="{% product_card_url product.image %}" 
                 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); 
                         max-height: 80%; max-width: 80%; width: auto; height: auto; object-fit: contain;"/>
           </a>
