--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -218,6 +218,11 @@
           <li class="nav-item">
             <a href="{% url 'blog:bloglist' %}">بلاگ</a>
           </li>
+          <li class="nav-item">
+            <a href="{% url 'products:crop_form' %}">
+              <i class="fas fa-crop-alt"></i> کراپ تصویر
+            </a>
+          </li>
         </ul>
       </div>
     </div>
