--- a/main/home/templates/home.html
+++ b/main/home/templates/home.html
@@ -4,7 +4,7 @@
 {% load humanize %}
 {% load imagekit_tags %}
 
-{% block title %}{{ global_settings.site_title|default:'فروشگاه اینترنتی' }}{% endblock %}
+{% block title %}آبخیر{% endblock %}
 {% block meta_title %}{{ global_settings.site_title|default:'فروشگاه اینترنتی' }}{% endblock %}
 {% block meta_description %}{{ global_settings.meta_description|default:company_info.short_description }}{% endblock %}
 {% block og_description %}{{ global_settings.meta_description|default:company_info.short_description }}{% endblock %}
